Fixes non wrapping company name in sidebar

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -186,6 +186,7 @@ button.btn {
     padding: 1.4em 0 2.9em;
     float: none;
     .companyname {
+      word-wrap: break-word;
       text-align: center;
       overflow: hidden;
       float: none;
